syntax = "proto3";
package historical;

option go_package = "adapter/grpc-proto/historical";


message GetOrderHistoryRequest{
  string  category = 1;
  string  symbol = 2;
  string  baseCoin = 3;
  string  settleCoin = 4;
  string  orderId = 5;
  string  orderLinkId = 6;
  string  orderFilter = 7;
  string  orderStatus = 8;
  string  startTime = 9;
  string  endTime = 10;
  string  limit = 11;
  string  cursor = 12;
}
